# cross-asset-engine

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: daily.yml
cross_asset_engine/: settings.py  tenors.py
cross_asset_engine/backtest/: engine.py  metrics.py  report.py  strategies.py
cross_asset_engine/briefing/: builder.py  charts.py  llm_narrative.py  narrative.py
cross_asset_engine/briefing/templates/: briefing.html.j2
cross_asset_engine/config/: instruments.yaml  params.yaml
cross_asset_engine/curve/: bootstrap.py  dv01.py  rv_screens.py
cross_asset_engine/data/: alphavantage.py  cache.py  exceptions.py  fred.py  market_data.py  schema.py
cross_asset_engine/signals/: __init__.py  base.py  carry.py  momentum.py  regime.py
docs/: briefing_2026-07-08.json  index.html
scripts/: _serve_docs.py  backtest_report.py  curve_summary.py  pull_data_summary.py  run_daily.py  signals_summary.py
tests/: conftest.py  test_alphavantage_loader.py  test_backtest.py  test_bootstrap.py  test_briefing.py  test_cache.py  test_carry.py  test_dv01.py  test_fred_loader.py  test_market_data.py  test_momentum.py  test_no_lookahead.py  test_regime.py  test_registry.py  test_rv_screens.py  test_schema.py  test_settings.py
