[project]
name = "cross-asset-engine"
version = "0.1.0"
description = "Cross-asset market monitor: signal engine, curve RV screens, and daily briefing"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
